.helm/templates/app/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: cydeaos-api
spec:
  selector:
    app: cydeaos-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
