.helm/templates/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cydeaos
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cydeaos-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cydeaos-app
                port:
                  number: 80
